--- a/custom_components/casadns/translations/nl.json
+++ b/custom_components/casadns/translations/nl.json
@@ -35,7 +35,7 @@
   "entity": {
     "sensor": {
       "public_ip": {
-        "name": "CasaDNS Publiek IP"
+        "name": "Publiek IP"
       }
     }
   },
