--- a/custom_components/casadns/translations/en.json
+++ b/custom_components/casadns/translations/en.json
@@ -35,7 +35,7 @@
   "entity": {
     "sensor": {
       "public_ip": {
-        "name": "CasaDNS Public IP"
+        "name": "Public IP"
       }
     }
   },
